name:                nonsidereal-fix
version:             0.1
copyright:           1998-2017, AURA Inc.
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          dnavarro@gemini.edu
homepage:            https://github.com/jdnavarro/nonsidereal-fix
bug-reports:         https://github.com/jdnavarro/nonsidereal/issues
synopsis:            Nonsidereal fix for ITAC XML proposals
description:
  Script to convert non-sidereal target coordinates to a single sidereal
  coordinate pair so that they can be ingested by ITAC. The collapsed coordinate
  pair is the mean of the ephemeris coordinates.
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/jdnavarro/nonsidereal-fix

executable nonsidereal-fix
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11,
                       filepath,
                       text,
                       xml-conduit
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
